--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,12 @@
-{% set name = "ajsonrpc" %}
 {% set version = "1.2.0" %}
 
 
 package:
-  name: {{ name|lower }}
+  name: ajsonrpc
   version: {{ version }}
 
 source:
-  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/ajsonrpc-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/a/ajsonrpc/ajsonrpc-{{ version }}.tar.gz
   sha256: 791bac18f0bf0dee109194644f151cf8b7ff529c4b8d6239ac48104a3251a19f
 
 build:
